# ProyectoML

./: .gitignore  README.md
kedro-project/: .gitignore  README.md  pyproject.toml  session_store.db
kedro-project/.viz/: stats.json
kedro-project/conf/base/: catalog.yml  parameters_business_understanding.yml  parameters_classification.yml  parameters_llamar_api.yml
kedro-project/notebooks/: fase_1.ipynb  fase_2.ipynb  fase_3.ipynb  fase_4.ipynb
kedro-project/src/kedro_project/: pipeline_registry.py
kedro-project/src/kedro_project/pipelines/business_understanding/: __init__.py  nodes.py  pipeline.py
kedro-project/src/kedro_project/pipelines/classification/: __init__.py  nodes.py  pipeline.py
kedro-project/src/kedro_project/pipelines/fetch_api/: nodes.py  pipeline.py
kedro-project/src/kedro_project/pipelines/llamar_api/: __init__.py  nodes.py  pipeline.py
kedro-project/tests/pipelines/business_understanding/: test_pipeline.py
kedro-project/tests/pipelines/classification/: test_pipeline.py
kedro-project/tests/pipelines/llamar_api/: test_pipeline.py
